# agentkit

./: AGENTS.md  CLAUDE.md  RULES.md  pyproject.toml
docs/: IMPLEMENTATION PLAN module extraction.md  global agent implementation plan.md  implementation plan claude code.md  lessons_learned.md
skills/evernote/: SKILL.md
skills/grill-instruct/: SKILL.md
skills/llm-smoke/: SKILL.md
skills/sourcing/: README.md  SKILL.md
skills/write-skill-or-agent/: SKILL.md
src/agentkit/: __init__.py
src/agentkit/browser/: _browser.py
src/agentkit/evernote/: __init__.py  _cli.py  _client.py
src/agentkit/gmail/: _client.py  cli.py
src/agentkit/llm/: __init__.py  _litellm.py  _mlx.py
src/agentkit/pdf/: cli.py  rename.py
src/agentkit/speech/: __init__.py  stt.py  tts.py
tests/: test_evernote.py  test_gmail.py  test_gmail_cli.py  test_llm_litellm.py  test_llm_mlx.py  test_speech.py
tests/pdf/: test_cli.py  test_rename.py
